@@ -1,4 +1,4 @@
-# $Id: VRMLC.pm,v 1.259 2007/01/22 18:44:51 crc_canada Exp $
+# $Id: VRMLC.pm,v 1.260 2007/01/30 18:16:39 crc_canada Exp $
 #
 # Copyright (C) 1998 Tuomas J. Lukka 1999 John Stewart CRC Canada
 # Portions Copyright (C) 1998 Bernhard Reiter
@@ -8,6 +8,9 @@
 
 #
 # $Log: VRMLC.pm,v $
+# Revision 1.260  2007/01/30 18:16:39  crc_canada
+# PROTO transparent material; some EAI changes.
+#
 # Revision 1.259  2007/01/22 18:44:51  crc_canada
 # EAI conversion from "Ascii" type to internal FIELDTYPE happens as close to the
 # EAI interface as possible.
@@ -732,29 +735,6 @@ sub gen {
 
 
 	#####################
-	# create a function that goes through the nodes, and updates the
-	# parent fields, used for PROTO expansions.
-	push @genFuncs2, "static int level=0;\n";
-	push @str, "\nvoid checkParentLink (struct X3D_Node * node,struct X3D_Node *parent);\n";
-	push @genFuncs2, "\nvoid checkParentLink (struct X3D_Node *node,struct X3D_Node *parent) {\n".
-			"\tint i; int n; void * *p;\n".
-			#"printf (\"%d checkParentLink for node %d type %s\\n\",level,node,stringNodeType(node->_nodeType));\n\n".
-			"\tif (parent != NULL) add_parent(node, parent);\n\n".
-			"\tswitch (node->_nodeType) {\n";
-	for my $node (@sortedNodeList) {
-		if (exists $VRML::Nodes{$node}{Defaults}{children}) {
-			push @genFuncs2, "\tcase NODE_$node:\n".
-			"\t\tn = ((struct X3D_$node *) node)->children.n; \n".
-			"\t\tp = ((struct X3D_$node *) node)->children.p; break;\n";
-			#print "node $node has chldren\n";
-		}
-	}
-	push @genFuncs2,"\tdefault:return;\n\t}\n";
-
-	push @genFuncs2,"\tlevel++;\n\tfor (i=0; i<n; i++) { \n".
-		#"\t\tprintf (\"checking child %d of %d of %d\\n\",i,n,node);\n".
-		"\t\t checkParentLink(p[i],node);\n\t}\n\tlevel--;\n}\n";
-
 	#####################
 	# print out generated functions to a file
 	open GENFUNC, ">CFuncs/GeneratedCode.c";
